--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,20 @@
-name: CI-CD Pipeline
+name: Kubernetes Manifests CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
-  build-and-deploy:
+  validate:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Set up Docker
-      uses: docker/setup-buildx-action@v2
-
-    - name: Build Docker image
-      run: |
-        docker build -t restaurant-service:1.0 restaurant-service
-
-    - name: Deploy to Kubernetes
-      run: |
-        kubectl apply -f k8s/
+      - name: List Kubernetes manifests
+        run: |
+          echo "Kubernetes YAML files:"
+          ls k8s
 
