--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,8 @@ jobs:
 
       - name: Validate Kubernetes manifests
         run: |
-          echo "Listing Kubernetes YAML files"
-          ls k8s
+          echo "Listing Kubernetes YAML files in repo root"
+          ls *.yaml
+
 
 
